--- a/resources/admin/starter.html
+++ b/resources/admin/starter.html
@@ -280,8 +280,8 @@ desired effect
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Page Header
-        <small>Optional description</small>
+        Olá
+        <small>Selecione uma opção para começar</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
